# easy-publish

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
easy_publish/: __init__.py  posts.py  utils.py
tests/: test_posts.py  test_utils.py
tests/fakenotes/: note.md  other-note-two.md  other.md
